Finished document_loader

--- a/example_codes/building_llms_for_productions/langchain/6_10_documentloader_ArxivLoader.ipynb
+++ b/example_codes/building_llms_for_productions/langchain/6_10_documentloader_ArxivLoader.ipynb
@@ -3,23 +3,223 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "# Arxiv Loader\n",
+    "\n",
+    "[`arXiv`]([https://arxiv.org/](https://arxiv.org/)) là một kho lưu trữ truy cập mở cho 2 triệu bài báo khoa học trong các lĩnh vực vật lý,\n",
+    "\n",
+    "toán học, khoa học máy tính, sinh học định lượng, tài chính định lượng, thống kê, kỹ thuật điện và hệ thống\n",
+    "\n",
+    "khoa học và kinh tế.\n",
+    "\n",
+    "[Tài liệu API](https://api.python.langchain.com/en/latest/document_loaders/langchain_community.document_loaders.arxiv.ArxivLoader.html#langchain_community.document_loaders.arxiv.ArxivLoader)\n",
+    "\n",
+    "Để truy cập trình tải tài liệu Arxiv, bạn cần cài đặt các gói tích hợp `arxiv`, `PyMuPDF` và `langchain-community`.\n",
+    "\n",
+    "`PyMuPDF` chuyển đổi các tệp PDF được tải xuống từ arxiv.org sang định dạng văn bản.\n",
+    "\n",
+    "```bash\n",
+    "pip install arxiv pymupdf\n",
+    "```\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Arxiv-Loader-Instantiate\n",
+    "\n",
+    "Bạn có thể tạo một instance trình tải arxiv để tải tài liệu từ arxiv.org.\n",
+    "\n",
+    "Khởi tạo với truy vấn tìm kiếm để tìm tài liệu trong Arixiv.org.\n",
+    "Hỗ trợ tất cả các đối số của `ArxivAPIWrapper`.\n"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
-    "from dotenv import load_dotenv\n",
-    "from langchain_openai import ChatOpenAI\n",
-    "from langchain_core.prompts import PromptTemplate\n",
-    "from langchain_core.output_parsers import StrOutputParser\n",
+    "from langchain_community.document_loaders import ArxivLoader\n",
     "\n",
-    "load_dotenv(override=True, dotenv_path=\"../.env\")\n",
+    "### Enter the research topic you want to search for in the Query parameter\n",
+    "loader = ArxivLoader(\n",
+    "    query=\"Chain of thought\",\n",
+    "    load_max_docs=2,  # max number of documents\n",
+    "    load_all_available_meta=True,  # load all available metadata\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Load\n",
     "\n",
-    "llm = ChatOpenAI(model_name=\"gpt-3.5-turbo\", temperature=0.0)"
+    "Use `Load` method to load documents from arxiv.org with `ArxivLoader` instance."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Contrastive Chain-of-Thought Prompting\n",
+      "Yew Ken Chia∗1,\n",
+      "Guizhen Chen∗1, 2\n",
+      "Luu Anh Tuan2\n",
+      "Soujanya Pori\n",
+      "{'Published': '2023-11-15', 'Title': 'Contrastive Chain-of-Thought Prompting', 'Authors': 'Yew Ken Chia, Guizhen Chen, Luu Anh Tuan, Soujanya Poria, Lidong Bing', 'Summary': 'Despite the success of chain of thought in enhancing language model\\nreasoning, the underlying process remains less well understood. Although\\nlogically sound reasoning appears inherently crucial for chain of thought,\\nprior studies surprisingly reveal minimal impact when using invalid\\ndemonstrations instead. Furthermore, the conventional chain of thought does not\\ninform language models on what mistakes to avoid, which potentially leads to\\nmore errors. Hence, inspired by how humans can learn from both positive and\\nnegative examples, we propose contrastive chain of thought to enhance language\\nmodel reasoning. Compared to the conventional chain of thought, our approach\\nprovides both valid and invalid reasoning demonstrations, to guide the model to\\nreason step-by-step while reducing reasoning mistakes. To improve\\ngeneralization, we introduce an automatic method to construct contrastive\\ndemonstrations. Our experiments on reasoning benchmarks demonstrate that\\ncontrastive chain of thought can serve as a general enhancement of\\nchain-of-thought prompting.', 'entry_id': 'http://arxiv.org/abs/2311.09277v1', 'published_first_time': '2023-11-15', 'comment': None, 'journal_ref': None, 'doi': None, 'primary_category': 'cs.CL', 'categories': ['cs.CL'], 'links': ['http://arxiv.org/abs/2311.09277v1', 'http://arxiv.org/pdf/2311.09277v1']}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Print the first document's content and metadata\n",
+    "docs = loader.load()\n",
+    "print(docs[0].page_content[:100])\n",
+    "print(docs[0].metadata)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- If `load_all_available_meta` is False, only partial metadata is displayed, not the complete metadata."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Lazy Load\n",
+    "\n",
+    "When loading large amounts of documents, If you can perform downstream tasks on a subset of all loaded documents, you can `lazy_load` documents one at a time to minimize memory usage."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Contrastive Chain-of-Thought Prompting\n",
+      "Yew Ken Chia∗1,\n",
+      "Guizhen Chen∗1, 2\n",
+      "Luu Anh Tuan2\n",
+      "Soujanya Pori\n",
+      "{'Published': '2023-11-15', 'Title': 'Contrastive Chain-of-Thought Prompting', 'Authors': 'Yew Ken Chia, Guizhen Chen, Luu Anh Tuan, Soujanya Poria, Lidong Bing', 'Summary': 'Despite the success of chain of thought in enhancing language model\\nreasoning, the underlying process remains less well understood. Although\\nlogically sound reasoning appears inherently crucial for chain of thought,\\nprior studies surprisingly reveal minimal impact when using invalid\\ndemonstrations instead. Furthermore, the conventional chain of thought does not\\ninform language models on what mistakes to avoid, which potentially leads to\\nmore errors. Hence, inspired by how humans can learn from both positive and\\nnegative examples, we propose contrastive chain of thought to enhance language\\nmodel reasoning. Compared to the conventional chain of thought, our approach\\nprovides both valid and invalid reasoning demonstrations, to guide the model to\\nreason step-by-step while reducing reasoning mistakes. To improve\\ngeneralization, we introduce an automatic method to construct contrastive\\ndemonstrations. Our experiments on reasoning benchmarks demonstrate that\\ncontrastive chain of thought can serve as a general enhancement of\\nchain-of-thought prompting.', 'entry_id': 'http://arxiv.org/abs/2311.09277v1', 'published_first_time': '2023-11-15', 'comment': None, 'journal_ref': None, 'doi': None, 'primary_category': 'cs.CL', 'categories': ['cs.CL'], 'links': ['http://arxiv.org/abs/2311.09277v1', 'http://arxiv.org/pdf/2311.09277v1']}\n"
+     ]
+    }
+   ],
+   "source": [
+    "docs = []\n",
+    "docs_lazy = loader.lazy_load()\n",
+    "\n",
+    "# append docs to docs list\n",
+    "# async variant : docs_lazy = await loader.lazy_load()\n",
+    "\n",
+    "for doc in docs_lazy:\n",
+    "    docs.append(doc)\n",
+    "\n",
+    "print(docs[0].page_content[:100])\n",
+    "print(docs[0].metadata)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(docs)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Asynchronous Load\n",
+    "\n",
+    "Use `aload` method to load documents from arxiv.org asynchronously."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Contrastive Chain-of-Thought Prompting\n",
+      "Yew Ken Chia∗1,\n",
+      "Guizhen Chen∗1, 2\n",
+      "Luu Anh Tuan2\n",
+      "Soujanya Pori\n",
+      "{'Published': '2023-11-15', 'Title': 'Contrastive Chain-of-Thought Prompting', 'Authors': 'Yew Ken Chia, Guizhen Chen, Luu Anh Tuan, Soujanya Poria, Lidong Bing', 'Summary': 'Despite the success of chain of thought in enhancing language model\\nreasoning, the underlying process remains less well understood. Although\\nlogically sound reasoning appears inherently crucial for chain of thought,\\nprior studies surprisingly reveal minimal impact when using invalid\\ndemonstrations instead. Furthermore, the conventional chain of thought does not\\ninform language models on what mistakes to avoid, which potentially leads to\\nmore errors. Hence, inspired by how humans can learn from both positive and\\nnegative examples, we propose contrastive chain of thought to enhance language\\nmodel reasoning. Compared to the conventional chain of thought, our approach\\nprovides both valid and invalid reasoning demonstrations, to guide the model to\\nreason step-by-step while reducing reasoning mistakes. To improve\\ngeneralization, we introduce an automatic method to construct contrastive\\ndemonstrations. Our experiments on reasoning benchmarks demonstrate that\\ncontrastive chain of thought can serve as a general enhancement of\\nchain-of-thought prompting.', 'entry_id': 'http://arxiv.org/abs/2311.09277v1', 'published_first_time': '2023-11-15', 'comment': None, 'journal_ref': None, 'doi': None, 'primary_category': 'cs.CL', 'categories': ['cs.CL'], 'links': ['http://arxiv.org/abs/2311.09277v1', 'http://arxiv.org/pdf/2311.09277v1']}\n"
+     ]
+    }
+   ],
+   "source": [
+    "docs = await loader.aload()\n",
+    "print(docs[0].page_content[:100])\n",
+    "print(docs[0].metadata)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Use Summaries of Articles as Docs\n",
+    "\n",
+    "Use `get_summaries_as_docs` method to get summaries of articles as docs."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Large language models (LLMs) have demonstrated impressive reasoning\n",
+      "abilities, but they still strugg\n",
+      "{'Entry ID': 'http://arxiv.org/abs/2410.13080v1', 'Published': datetime.date(2024, 10, 16), 'Title': 'Graph-constrained Reasoning: Faithful Reasoning on Knowledge Graphs with Large Language Models', 'Authors': 'Linhao Luo, Zicheng Zhao, Chen Gong, Gholamreza Haffari, Shirui Pan'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "from langchain_community.document_loaders import ArxivLoader\n",
+    "\n",
+    "loader = ArxivLoader(\n",
+    "    query=\"reasoning\"\n",
+    ")\n",
+    "\n",
+    "docs = loader.get_summaries_as_docs()\n",
+    "print(docs[0].page_content[:100])\n",
+    "print(docs[0].metadata)"
    ]
   },
   {
