--- a/example_codes/building_llms_for_productions/langchain/6_12_documentloader_LlamaParser.ipynb
+++ b/example_codes/building_llms_for_productions/langchain/6_12_documentloader_LlamaParser.ipynb
@@ -3,23 +3,24 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "import os\n",
-    "from dotenv import load_dotenv\n",
-    "from langchain_openai import ChatOpenAI\n",
-    "from langchain_core.prompts import PromptTemplate\n",
-    "from langchain_core.output_parsers import StrOutputParser\n",
+    "# LlamaParse\n",
     "\n",
-    "load_dotenv(override=True, dotenv_path=\"../.env\")\n",
+    "`LlamaParse` là một dịch vụ phân tích tài liệu được phát triển bởi **LlamaIndex**, được thiết kế đặc biệt cho các mô hình ngôn ngữ lớn (LLMs).\n",
     "\n",
-    "llm = ChatOpenAI(model_name=\"gpt-3.5-turbo\", temperature=0.0)"
+    "Các tính năng chính:\n",
+    "\n",
+    "- Hỗ trợ nhiều định dạng tài liệu khác nhau, chẳng hạn như PDF, Word, PowerPoint và Excel\n",
+    "- Định dạng đầu ra tùy chỉnh thông qua hướng dẫn ngôn ngữ tự nhiên\n",
+    "- Khả năng trích xuất bảng và hình ảnh nâng cao\n",
+    "- Hỗ trợ đa ngôn ngữ\n",
+    "- Hỗ trợ nhiều định dạng đầu ra\n",
+    "\n",
+    "`LlamaParse` có sẵn dưới dạng API độc lập và cũng được tích hợp vào nền tảng LlamaCloud. Dịch vụ này nhằm mục đích nâng cao hiệu suất của các ứng dụng dựa trên LLM, chẳng hạn như RAG (Retrieval-Augmented Generation), bằng cách phân tích cú pháp và tinh chỉnh tài liệu.\n",
+    "\n",
+    "Người dùng có thể xử lý tối đa 1.000 trang mỗi ngày miễn phí, với dung lượng bổ sung có sẵn thông qua các gói trả phí. `LlamaParse` hiện đang được cung cấp ở dạng beta công khai và liên tục mở rộng các tính năng của mình.\n",
+    "\n",
+    "- Liên kết: [https://cloud.llamaindex.ai](https://cloud.llamaindex.ai)\n"
    ]
   },
   {
@@ -27,6 +28,18 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[READ MORE](https://github.com/aidino/LangChain-OpenTutorial/blob/main/06-DocumentLoader/12-LlamaParse.ipynb)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
